--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,7 @@
 .container {
     min-height: 100vh;
     height: fit-content;
-    padding-top: 80px;
+    padding: 80px 10px 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
