--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,8 @@
 .container {
     min-height: 100vh;
     height: fit-content;
-    padding: 80px 10px 0 10px;
+    /* padding: 80px 10px 0 10px; */
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
