--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,7 @@ body {
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -13,7 +14,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #ffffff;
   text-decoration: none;
 }
 
