--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     /* background: rgb(175,205,255);
     background: linear-gradient(21deg, rgba(175,205,255,1) 0%, rgba(251,251,251,0.37307422969187676) 48%, rgba(255,227,179,1) 100%); */
   }
