--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -10,6 +10,10 @@
     align-items: center;
     height: 60px;
 }
+.nav-txt{
+    font-weight: 10px;
+    font-size: 16px;
+}
 
 @media (max-width: 600px) {
     .nav-logo{
