--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px 0 10px 0;
 }
 .drawer-logo{
     background-color: #01013F;
