--- a/styles/global.css
+++ b/styles/global.css
@@ -66,3 +66,27 @@ p{
   font-family: 'futura';
   margin: 0;
 }
+
+.center-txt{
+  text-align: center;
+  margin: 0;
+}
+.container-btn{
+  display: flex;
+  justify-content: center;
+}
+.btn-home{
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 20px;
+  padding: 5px 20px 5px 20px;
+  width: fit-content;
+  background-color: #020251;
+  border-radius: 12px;
+  border: 2px solid #020251;
+}
+
+.btn-home:hover{
+  color: #020251;
+  background-color: #f8f8f800;
+}
