--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,18 +2,37 @@
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
- justify-content: space-evenly;
- padding: 50px 20px 0 20px;
+ /* justify-content: space-evenly; */
+ /* padding: 20px 0px 0 0px; */
  width: 100%;
+ position: relative;
 }
 .home-txt{
   width: 450px;
+  padding: 100px;
+  position: absolute;
+  z-index: 10;
+  background: rgb(0,0,124);
+  background: linear-gradient(90deg, rgba(0,0,124,0.7792366946778712) 0%, rgba(255,255,255,0) 100%);
+  color: white;
+  height: 800px;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  text-align: start;
+}
+.home-txt h1{
+  /* margin-left: 30px; */
+  font-size: 45px;
+  width: 80%;
 }
 .home-txt p{
-  margin-left: 30px;
+  margin-left: 50px;
+  font-size: 22px;
 }
 .home-txt h6{
-  margin-top: 50px;
+  margin-top:20px;
   text-align: center;
 }
 
