--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,3 +1,9 @@
+.toolbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 30px;
+}
 .nav-logo{
     display: flex;
     justify-content: center;
@@ -28,11 +34,25 @@
 .nav-txt{
     font-weight: 10px;
     font-size: 16px;
+    color: #01013F;
+}
+.parallelogram{
+    background: rgb(255,216,171);
+    background: linear-gradient(90deg, rgba(255,216,171,1) 4%, rgba(246,146,30,1) 100%);
+    transform: skew(-30deg);
+    margin-right: -40px;
+    display: flex;
+    padding-right: 40px;
+    padding-left: 20px;
+    margin-left: 30px;
 }
 
 @media (max-width: 600px) {
     .nav-logo{
         width: 100%;
         padding-right: 50px;
+    }
+    .parallelogram{
+        display: none;
     }
 }
