--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,14 @@
 .home{
- display: flex;
- flex-direction: row;
- flex-wrap: wrap;
- /* justify-content: space-evenly; */
- /* padding: 20px 0px 0 0px; */
- width: 100%;
- position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
+  width: 100%;
+  position: relative;
 }
 .home-txt{
   width: 450px;
-  padding: 100px;
+  padding: 0 100px 0 100px;
   position: absolute;
   z-index: 10;
   background: rgb(0,0,124);
@@ -147,14 +146,36 @@
 .section-title{
   /* text-align: start; */
   margin-left: 150px;
+  padding-top: 50px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .home-txt{
-    width: auto;
+    width: 100%;
+    /* padding-top: 100px; */
+  }
+ 
+  .home-txt p{
+    font-size: 20px;
   }
 }
 @media (max-width: 768px) {
+  .home-txt{
+    width: 100%;
+    padding: 20px;
+  }
+  .home-txt h1{
+    font-size: 35px;
+    width: 100%;
+  }
+  .home-txt p{
+    font-size: 20px;
+    margin-left: 0;
+  }
+  .home-txt h6{
+    font-size: 35px;
+    /* width: 100%; */
+  }
   .section-title{
     text-align: center;
     margin-left: 0;
@@ -164,4 +185,7 @@
     margin-left: 0;
     text-align: center;
   }
+
 }
+
+
