--- a/components/carouselSlide.module.css
+++ b/components/carouselSlide.module.css
@@ -11,10 +11,15 @@
 .slide{
     width: 100%;
     height: 500px;
-    /* background-color: aqua; */
+    filter: brightness(70%) ;
+    transition: filter 2s;
+
+
 }
 .slide:hover{
-  filter: brightness(110%)
+    filter: brightness(90%) ;
+
+
 }
 .slide-middle{
     width: 100%;
@@ -27,8 +32,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* overflow: 'hidden';
-    position: relative; */
+    position: relative;
 }
 .slide-img{
     object-fit: cover;
@@ -36,11 +40,13 @@
     width: 100%;
     height: 100%;
 }
-.container-middle{
-    width: 50%;
-    height: fit-content;
+/* .container-middle{ */
+    /* position: absolute;
+    z-index: 10;
+    left: 25%;
+    width: 100%; */
     /* background-color: aqua; */
-}
+/* } */
 /* .slide-desc{
     width: 45%;
     display: flex;
