--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,23 +85,14 @@
   /* flex-wrap: wrap; */
   overflow-x:auto;
   padding-right: 10px;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
   /* width: 100vw; */
 }
-.horizontal-img{
-  object-fit: cover;
-  height: 200px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  min-width: 300px;
+.clients::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none;
 }
-.vertical-img{
-  object-fit: cover;
-  object-position: 50% 0px;
-  margin-left: 10px;
-  /* margin-right: 10px; */
-  align-self: center;
-  min-width: 230;
-}
+
 
 /* FOOTER */
 .footer-sections{
@@ -149,6 +140,30 @@
   /* text-align: start; */
   margin-left: 150px;
   padding-top: 50px;
+}
+.horizontal-img{
+  object-fit: contain;
+  height: 200px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  min-width: 300px;
+  margin-right: 10px;
+}
+.horizontal-img-sm{
+  object-fit: contain;
+  height: 200px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  min-width: 200px;
+  margin-right: 10px;
+}
+.vertical-img{
+  object-fit: cover;
+  object-position: 50% 0px;
+  margin-left: 10px;
+  /* margin-right: 10px; */
+  align-self: center;
+  min-width: 230;
 }
 
 @media (max-width: 1000px) {
