--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,20 +1,19 @@
 .container {
     min-height: 100vh;
     height: fit-content;
-    /* padding: 80px 10px 0 10px; */
-    /* padding-top: 50px; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* background: rgb(175,205,255);
-    background: linear-gradient(21deg, rgba(175,205,255,1) 0%, rgba(251,251,251,0.37307422969187676) 48%, rgba(255,227,179,1) 100%); */
   }
-  .bg-normal{
-    background: rgb(175,205,255);
-    background: linear-gradient(30deg, rgba(175,205,255,1) 0%, rgba(251,251,251,0.37307422969187676) 48%, rgba(255,227,179,1) 100%);
+  .bg-img{
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  .bg-reverse{
-    background: rgb(175,205,255);
-    background: linear-gradient(150deg, rgba(175,205,255,1) 0%, rgba(251,251,251,0.37307422969187676) 48%, rgba(255,227,179,1) 100%);
+  .gradient-filter{
+    background: rgb(85,85,222);
+    background: linear-gradient(27deg, rgba(85,85,222,1) 0%, rgba(255,255,255,0.7848389355742297) 39%, rgba(250,171,92,1) 100%);
+  }
+  .blue-filter{
+    background-color: #01013fe1
   }
