--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -34,17 +34,17 @@
 .nav-txt{
     font-weight: 10px;
     font-size: 16px;
-    color: #01013F;
+    color: white;
 }
 .parallelogram{
-    background: rgb(255,216,171);
-    background: linear-gradient(90deg, rgba(255,216,171,1) 4%, rgba(246,146,30,1) 100%);
+    background: #F8841C;
     transform: skew(-30deg);
     margin-right: -40px;
     display: flex;
     padding-right: 40px;
     padding-left: 20px;
     margin-left: 30px;
+    width: 70%;
 }
 
 @media (max-width: 600px) {
