--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,19 +1,31 @@
 .container {
-    min-height: 100vh;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-  }
-  .bg-img{
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  .gradient-filter{
-    background: rgb(85,85,222);
-    background: linear-gradient(27deg, rgba(85,85,222,1) 0%, rgba(255,255,255,0.7848389355742297) 39%, rgba(250,171,92,1) 100%);
-  }
-  .blue-filter{
-    background-color: #01013fe1
-  }
+  min-height: 100vh;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+.empty-bg{
+  background-color: #ddd; /* Optional: Background color as a placeholder */
+
+  /* Apply a blurry effect to the background image */
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* For compatibility with Safari */
+
+  /* Add a transition effect for a smoother appearance */
+  transition: backdrop-filter 0.3s ease-in-out; 
+}
+.bg-img{
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* object-fit: fill; */
+}
+.gradient-filter{
+  background: rgb(85,85,222);
+  background: linear-gradient(27deg, rgba(85,85,222,1) 0%, rgba(255,255,255,0.7848389355742297) 39%, rgba(250,171,92,1) 100%);
+
+}
+.blue-filter{
+  background-color: #01013fe1
+}
