--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -2,48 +2,52 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 30px;
+    /* padding-left: 30px; */
+    height: 100px;
+    /* height: fit-content; */
+    /* position: relative; */
 }
 .nav-logo{
     display: flex;
-    justify-content: center;
+    padding-left: 40px;
+    /* justify-content: start; */
+    /* position: relative; */
+    /* position: absolute; */
     align-items: center;
-    margin: 10px 0 10px 0;
+    /* margin: 10px 0 10px 0; */
+    background-color: #3535FF;
+    width: 40%;
+    height: 120px;
+    transform: skew(-30deg);
+    margin-left: -40px;
+    padding-right: 0px;
+    padding-left: 80px;
+}
+.nav-img{
+    transform: skew(30deg);
+}
+.drawer-img{
+    margin-left: 32%;
 }
 .drawer-logo{
-    background-color: #01013F;
+    background-color: #3535FF !important;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 60px;
 }
 .drawer-link{
-    color: #01013F;
     text-transform: uppercase;
     /* font-family: 'futura-medium'; */
 }
 .nav-txt{
     font-weight: 10px;
     font-size: 16px;
-    color: white;
-}
-.parallelogram{
-    background: #F8841C;
-    transform: skew(-30deg);
-    margin-right: -40px;
-    display: flex;
-    padding-right: 40px;
-    padding-left: 20px;
-    margin-left: 30px;
-    width: 70%;
+    color: rgb(0, 0, 0);
 }
 
 @media (max-width: 600px) {
     .nav-logo{
-        width: 100%;
-        padding-right: 50px;
-    }
-    .parallelogram{
         display: none;
     }
 }
