add loading and fix content

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -27,7 +27,7 @@
     transform: skew(30deg);
 }
 .drawer-img{
-    margin-left: 32%;
+    margin-left: 40px;
 }
 .drawer-logo{
     background-color: #3535FF !important;
