--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -121,7 +121,7 @@
 .portofolio-content{
   min-height: 100vh;
   text-align: center;
-  padding: 100px 0 50px 0;
+  padding: 120px 0 50px 0;
 }
 .portofolio-content h2{
   color: white;
@@ -138,7 +138,7 @@
   padding-right: 10px;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .portofolio::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
   display: none;
@@ -156,10 +156,10 @@
 .our-services-content{
   min-height: 100vh;
   text-align: center;
-  padding: 100px 0 50px 0;
+  padding: 120px 0 50px 0;
 }
 .our-services-content h2{
-  margin-top: 20px;
+  /* margin-top: 20px; */
   color: #01013F;
   margin-bottom: 20px;
 }
@@ -225,7 +225,7 @@
 .our-clients-content{
   min-height: 100vh;
   height: fit-content;
-  padding: 100px 0 80px 0;
+  padding: 120px 0 80px 0;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -341,7 +341,7 @@
 
 
 
-@media (max-width: 1440px) {
+@media (max-width: 1700px) {
   .portofolio{
     justify-content: start;
   }
