try add logo in google search and fix 400 & 500 page

--- a/styles/global.css
+++ b/styles/global.css
@@ -87,6 +87,13 @@ mark{
   text-decoration: underline;
 }
 
+.container-info{
+  height: 100vh;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .center-txt{
   text-align: center;
   margin: 0;
